--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,17 +1,16 @@
+
+/* SHARED STYLES */
+
 body,
 h1,
 h2,
-h3 {
+h3,
+p {
     margin: 0;
 }
 
 .body {
-    font-family: "Open Sans", sans-serif;
-    font-size: 16px;
-    font-weight: 400;
-    font-style: normal;
-    line-height: 1.375;
-    color: var(--color-dark);
+    margin-top: 120px;
 }
 
 .btn {
@@ -19,6 +18,31 @@ h3 {
     padding: 15px 40px;
     justify-content: center;
     align-items: center;
+    align-self: center;
+}
+.btn-overview {
+    background: var(--color-dark);
+    border: 0;
+    width: 100%;
+    align-self: center;
+    box-sizing: border-box;
+
+    @media screen and (width >= 1920px) {
+        padding: 16px 50px;
+        max-width: 624px;
+    }
+    @media screen and (max-width: 1920px) {
+        padding: 16px 76px;
+        max-width: 604px;
+    }
+    @media screen and (max-width: 1340px) {
+        padding: 13px 40px;
+        max-width: 566px;
+    }
+    @media screen and (max-width: 768px) {
+        padding: 11px 19px;
+        max-width: 280px;
+    }
 }
 
 .header__user-btn { 
@@ -27,11 +51,18 @@ h3 {
 }
 
 .header {
+    position: fixed;
     display: flex;
     flex-direction: row;
 
     justify-content: space-between;
     align-items: center;
+    box-sizing: border-box;
+
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 10;
 
     background-color: var(--color-background-header);
     backdrop-filter: blur(10px);
@@ -68,27 +99,222 @@ h3 {
 
 .header__nav-link {
     text-decoration: none;
+    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+}
+.header__nav-link__active {
+    text-decoration: none;
+    color: var(--color-red-hover) !important;
+}
+.header__nav-link:hover {
+    color: var(--color-red-hover);
+    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+}
+
+.main {
+    margin-top: 112px;
 }
 
 .main-header {
     display: flex;
     flex-direction: column;
-
+    /* align-items: center; */
     gap: 70px;
-    margin: 100px 0;
 }
+
+.footer {
+    margin-top: auto 0 0;
+}
+.footer__wrapper {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+
+    gap: 60px;
+    align-items: center;
+    justify-content: center;
+
+    @media screen and (width >= 1920px) {
+        margin: 150px 293px 75px;
+    }
+    @media screen and (max-width: 1920px) {
+        margin: 150px 40px 75px;
+    }
+    @media screen and (max-width: 1340px) {
+        margin: 100px 30px 65px;
+    }
+    @media screen and (max-width: 768px) {
+        margin: 100px 0 50px;
+    }
+}
+.footer__lines {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+
+    @media screen and (width >= 1920px) {
+        gap: 98px;
+    }
+    @media screen and (max-width: 1920px) {
+        gap: 92px;
+    }
+    @media screen and (max-width: 1340px) {
+        gap: 52px;
+    }
+    @media screen and (max-width: 768px) {
+        gap: 20px;
+    }
+}
+.footer__line {
+    align-self: center;
+}
+
+
+/* HOME STYLES */
 
 .home__main-header {
     @media screen and (width >= 1920px) {
-        margin: 0 486px;
+        margin: 100px 486px 70px;
     }
     @media screen and (max-width: 1920px) {
-        margin: 0 301px;
+        margin: 100px 301px 70px;
     }
     @media screen and (max-width: 1340px) {
-        margin: 0 68px;
+        margin: 80px 68px 51px;
     }
     @media screen and (max-width: 768px) {
-        margin: 0 23px;
+        margin: 80px 23px 29px;
     }
+}
+
+
+/* EVENTS STYLES */
+
+.events__main-header {
+    @media screen and (width >= 1920px) {
+        margin: calc(138px + 147px) 0 150px;
+    }
+    @media screen and (max-width: 1920px) {
+        margin: calc(138px + 111px) 0 130px;
+    }
+    @media screen and (max-width: 1340px) {
+        margin: calc(91px + 111px) 0 100px;
+    }
+    @media screen and (max-width: 768px) {
+        margin: calc(80px + 70px) 0;
+    }
+}
+
+.events__articles {
+    position: relative;
+    display: grid;
+
+    @media screen and (width >= 1920px) {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 60px;
+        grid-row-gap: 120px;
+        padding: 0 292px;
+    }
+    @media screen and (max-width: 1920px) {
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        grid-column-gap: 40px;
+        grid-row-gap: 100px;
+        padding: 0 39px;
+    }
+    @media screen and (max-width: 1340px) {
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-rows: repeat(3, 1fr);
+        grid-column-gap: 30px;
+        grid-row-gap: 80px;
+        padding: 0 30px;
+    }
+    @media screen and (max-width: 768px) {
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(3, 1fr);
+        grid-row-gap: 60px;
+        padding: 0 20px;
+    }
+}
+
+.article {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+
+    @media screen and (width >= 1920px) {
+        gap: 25px;
+    }
+    @media screen and (max-width: 1920px) {
+        gap: 20px;
+    }
+    @media screen and (max-width: 1340px) {
+        gap: 15px;
+    }
+    @media screen and (max-width: 768px) {
+        gap: 25px;
+    }
+}
+.article__info {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+
+    @media screen and (width >= 1920px) {
+        gap: 15px;
+    }
+    @media screen and (max-width: 1920px) {
+        gap: 8px;
+    }
+    @media screen and (max-width: 1340px) {
+        gap: 10px;
+    }
+}
+.article-subtitle {
+    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+}
+.article-subtitle:hover {
+    color: var(--color-red-hover);
+    cursor: pointer;
+    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+}
+.article-image {
+    width: 100%;
+}
+
+.article__drop-down {
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    gap: 18px;
+    cursor: pointer;
+    max-width: 128px;
+    margin: 70px auto 100px;
+}
+
+.additional-services__header {
+    display: inline-flex;
+    justify-content: center;
+    width: 100%;
+    
+}
+
+.additional-services-btn {
+    @media screen and (width >= 1920px) {
+        margin-bottom: 150px;
+    }
+    @media screen and (max-width: 1920px) {
+        margin-bottom: 130px;
+    }
+    @media screen and (max-width: 1340px) {
+        margin-bottom: 100px;
+    }
+    @media screen and (max-width: 768px) {
+        margin-bottom: 80px;
+    }
+}
+
+.additional-services-title {
+    white-space: nowrap;
 }
