--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,320 +1,543 @@
-
-/* SHARED STYLES */
-
+.body {
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  font-weight: 400;
+  font-style: normal;
+  line-height: 1.375;
+  color: #1F1E1E;
+}
+/* Figma name: Desk. Типографика Cайт 1/Дек. текст/3 Цитата */
+.page-title {
+  color: #1F1E1E;
+  text-align: center;
+  font-family: Lora, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-transform: uppercase;
+  /* Figma name: Desk. Типографика Cайт 1/Дек. текст/3 Цитата */
+  /* Figma name: Desk. Типографика Cайт 1/Дек. текст/4 Цитата */
+  /* Figma name: Mob. Типографика Сайт 1/Дек. текст/3 цитата */
+  /* Figma name: Mob. Типографика Сайт 1/Дек. текст/4 цитата */
+}
+/* Figma name: Desk. Типографика Cайт 1/Заголовок/h2 Заголовок */
+.title {
+  color: #FFFFFF;
+  text-align: center;
+  font-family: Lora, sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  line-height: normal;
+  text-transform: uppercase;
+  /* Figma name: Desk. Типографика Cайт 1/Заголовок/h2 Заголовок */
+  /* Figma name: Mob. Типографика Сайт 1/Заголовок/h2 Заголовок */
+  /* Figma name: Mob. Типографика Сайт 1/Заголовок/h5 Заголовок */
+}
+/* Figma name: Desk. Типографика Cайт 1/Заголовок/h3 Заголовок */
+.title-secondary {
+  color: #FFFFFF;
+  text-align: center;
+  font-family: Lora, sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 30px;
+  /* 136.364% */
+  letter-spacing: 0.44px;
+  text-transform: uppercase;
+  /* Figma name: Desk. Типографика Cайт 1/Заголовок/h3 Заголовок */
+  /* Figma name: Mob. Типографика Сайт 1/Заголовок/h5 Заголовок */
+}
+/* Figma name: Desk. Типографика Cайт 1/Подзаголовок/2 Подзаголовок */
+.subtitle {
+  color: #1F1E1E;
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  /* Figma name: Desk. Типографика Cайт 1/Подзаголовок/2 Подзаголовок */
+  /* Figma name: Desk. Типографика Cайт 1/Подзаголовок/3 Подзаголовок */
+  /* Figma name: Mob. Типографика Сайт 1/Подзаголовок/3 Подзаголовок */
+}
+/* Figma name: Desk. Типографика Cайт 1/Текст/2 Текст */
+.text {
+  color: #1F1E1E;
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  /* Figma name: Desk. Типографика Cайт 1/Подзаголовок/2 Подзаголовок */
+  /* Figma name: Mob. Типографика Сайт 1/Текст/1 Текст */
+  /* Figma name: Mob. Типографика Сайт 1/Текст/2 Текст */
+}
+/* Figma name: Desk. Типографика Cайт 1/Цифры. Даты/2 Дата */
+.date-text {
+  color: #1F1E1E;
+  font-family: "Open Sans", sans-serif;
+  font-style: normal;
+  font-weight: 300;
+  line-height: normal;
+  /* Figma name: Desk. Типографика Cайт 1/Подзаголовок/2 Подзаголовок */
+  /* Figma name: Mob. Типографика Сайт 1/Цифры. Даты/2 Дата */
+}
+/* Figma name: Desk. Типографика Cайт 1/Ссылки. Навигация/Новигация/Навигация header */
+.link {
+  font-family: "Open Sans", sans-serif;
+  color: #1F1E1E;
+  font-weight: 600;
+  line-height: 25px;
+  /* Figma name: Desk. Типографика Cайт 1/Ссылки. Навигация/Новигация/Навигация header */
+  /* Figma name: None */
+}
+/* Figma name: Desk. Типографика Cайт 1/Кнопки/1 Кнопка */
+.button-text {
+  text-align: center;
+  color: #1F1E1E;
+  font-family: "Open Sans", sans-serif;
+  font-size: 16px;
+  font-style: normal;
+  font-weight: 600;
+  line-height: normal;
+}
 body,
 h1,
 h2,
 h3,
 p {
-    margin: 0;
+  margin: 0;
 }
-
-.body {
-    margin-top: 120px;
+body {
+  margin-top: 120px;
 }
-
+main {
+  margin-top: 112px;
+}
+/* Figma name: Сайт 1 Цвета/Осн. цвета/Черный */
+/* Figma name: Сайт 1 Цвета/Доп. цвета/Заливка header */
+/* Figma name: Сайт 1 Цвета/Доп. цвета/Красный hover */
+@font-face {
+  font-family: "mak";
+  src: local("MAK-bold"), url("../assets/fonts/MAK-bold.woff") format("woff");
+  font-weight: 700;
+  font-style: normal;
+}
+@font-face {
+  font-family: "mak";
+  src: local("MAK-light"), url("../assets/fonts/MAK-light.woff") format("woff");
+  font-weight: 300;
+  font-style: normal;
+}
+.events__articles {
+  position: relative;
+  display: grid;
+}
+.events__drop-down {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 18px;
+  cursor: pointer;
+  max-width: 128px;
+  margin: 70px auto 100px;
+}
+.additional-services__header {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+}
+.additional-services__title {
+  white-space: nowrap;
+}
+.main {
+  margin-top: 112px;
+}
+.main-header {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 70px;
+}
+.home__img-lenni {
+  display: block;
+  width: 100%;
+  height: 0;
+  padding-top: 16.927%;
+  position: relative;
+}
+.home__img-lenni svg {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
 .btn {
-    display: inline-flex;
-    padding: 15px 40px;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  padding: 15px 40px;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
 .btn-overview {
-    background: var(--color-dark);
-    border: 0;
-    width: 100%;
-    align-self: center;
-    box-sizing: border-box;
-
-    @media screen and (width >= 1920px) {
-        padding: 16px 50px;
-        max-width: 624px;
-    }
-    @media screen and (max-width: 1920px) {
-        padding: 16px 76px;
-        max-width: 604px;
-    }
-    @media screen and (max-width: 1340px) {
-        padding: 13px 40px;
-        max-width: 566px;
-    }
-    @media screen and (max-width: 768px) {
-        padding: 11px 19px;
-        max-width: 280px;
-    }
+  background: #1F1E1E;
+  border: 0;
+  width: 100%;
+  -ms-flex-item-align: center;
+      align-self: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
-
-.header__user-btn { 
-    text-decoration: none;
-    border: 1px solid var(--color-dark);
+.event-card {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: 100%;
 }
-
+.event-card__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+.event-card__subtitle {
+  -webkit-transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+}
+.event-card__subtitle:hover {
+  color: #A51505;
+  cursor: pointer;
+  -webkit-transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+}
+.event-card__image {
+  width: 100%;
+}
 .header {
-    position: fixed;
-    display: flex;
-    flex-direction: row;
-
-    justify-content: space-between;
-    align-items: center;
-    box-sizing: border-box;
-
-    width: 100%;
-    top: 0;
-    left: 0;
-    z-index: 10;
-
-    background-color: var(--color-background-header);
-    backdrop-filter: blur(10px);
-
-    @media screen and (width >= 1920px) {
-        padding: 0 293px;
-        height: 147px;
-    }
-    @media screen and (max-width: 1920px) {
-        padding: 0 40px;
-        height: 111px;
-    }
-    @media screen and (max-width: 1340px) {
-        padding: 0 30px;
-        height: 111px;
-    }
-    @media screen and (max-width: 768px) {
-        padding: 0;
-        height: 70px;
-    }
+  position: fixed;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 10;
+  background-color: #DEDEDE80;
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
 }
-
+.header__user-btn {
+  text-decoration: none;
+  border: 1px solid #1F1E1E;
+}
 .header__logo,
 .header__logo-img {
-    height: 100%;
+  height: 100%;
 }
-
 .header__nav {
-    display: inline-flex;
-
-    align-items: center;
-    gap: 25px;
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 25px;
 }
-
 .header__nav-link {
-    text-decoration: none;
-    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  text-decoration: none;
+  -webkit-transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 }
 .header__nav-link__active {
-    text-decoration: none;
-    color: var(--color-red-hover) !important;
+  text-decoration: none;
+  color: #A51505 !important;
 }
 .header__nav-link:hover {
-    color: var(--color-red-hover);
-    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  color: #A51505;
+  -webkit-transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
 }
-
-.main {
-    margin-top: 112px;
-}
-
-.main-header {
-    display: flex;
-    flex-direction: column;
-    /* align-items: center; */
-    gap: 70px;
-}
-
 .footer {
-    margin-top: auto 0 0;
-}
-.footer__wrapper {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-
-    gap: 60px;
-    align-items: center;
-    justify-content: center;
-
-    @media screen and (width >= 1920px) {
-        margin: 150px 293px 75px;
-    }
-    @media screen and (max-width: 1920px) {
-        margin: 150px 40px 75px;
-    }
-    @media screen and (max-width: 1340px) {
-        margin: 100px 30px 65px;
-    }
-    @media screen and (max-width: 768px) {
-        margin: 100px 0 50px;
-    }
-}
-.footer__lines {
-    display: flex;
-    justify-content: center;
-    width: 100%;
-
-    @media screen and (width >= 1920px) {
-        gap: 98px;
-    }
-    @media screen and (max-width: 1920px) {
-        gap: 92px;
-    }
-    @media screen and (max-width: 1340px) {
-        gap: 52px;
-    }
-    @media screen and (max-width: 768px) {
-        gap: 20px;
-    }
+  margin-top: auto 0 0;
 }
 .footer__line {
-    align-self: center;
+  -ms-flex-item-align: center;
+      align-self: center;
 }
-
-
-/* HOME STYLES */
-
-.home__main-header {
-    @media screen and (width >= 1920px) {
-        margin: 100px 486px 70px;
-    }
-    @media screen and (max-width: 1920px) {
-        margin: 100px 301px 70px;
-    }
-    @media screen and (max-width: 1340px) {
-        margin: 80px 68px 51px;
-    }
-    @media screen and (max-width: 768px) {
-        margin: 80px 23px 29px;
-    }
+.footer__wrapper {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 60px;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
-
-
-/* EVENTS STYLES */
-
-.events__main-header {
-    @media screen and (width >= 1920px) {
-        margin: calc(138px + 147px) 0 150px;
-    }
-    @media screen and (max-width: 1920px) {
-        margin: calc(138px + 111px) 0 130px;
-    }
-    @media screen and (max-width: 1340px) {
-        margin: calc(91px + 111px) 0 100px;
-    }
-    @media screen and (max-width: 768px) {
-        margin: calc(80px + 70px) 0;
-    }
+.footer__lines {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
 }
-
-.events__articles {
-    position: relative;
-    display: grid;
-
-    @media screen and (width >= 1920px) {
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        grid-column-gap: 60px;
-        grid-row-gap: 120px;
-        padding: 0 292px;
-    }
-    @media screen and (max-width: 1920px) {
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        grid-column-gap: 40px;
-        grid-row-gap: 100px;
-        padding: 0 39px;
-    }
-    @media screen and (max-width: 1340px) {
-        grid-template-columns: repeat(2, 1fr);
-        grid-template-rows: repeat(3, 1fr);
-        grid-column-gap: 30px;
-        grid-row-gap: 80px;
-        padding: 0 30px;
-    }
-    @media screen and (max-width: 768px) {
-        grid-template-columns: 1fr;
-        grid-template-rows: repeat(3, 1fr);
-        grid-row-gap: 60px;
-        padding: 0 20px;
-    }
+@media screen and (width >= 768px) {
+  .title-secondary {
+    font-size: 22px;
+  }
 }
-
-.article {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-
-    @media screen and (width >= 1920px) {
-        gap: 25px;
-    }
-    @media screen and (max-width: 1920px) {
-        gap: 20px;
-    }
-    @media screen and (max-width: 1340px) {
-        gap: 15px;
-    }
-    @media screen and (max-width: 768px) {
-        gap: 25px;
-    }
+@media screen and (width >= 1920px) {
+  .page-title {
+    font-size: 45px;
+  }
+  .link {
+    font-size: 18px;
+  }
+  .events__main-header {
+    margin: calc(138px + 147px) 0 150px;
+  }
+  .events__articles {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 60px;
+    grid-row-gap: 120px;
+    padding: 0 292px;
+  }
+  .additional-services__btn {
+    margin-bottom: 150px;
+  }
+  .home__main-header {
+    margin: 100px 486px 70px;
+  }
+  .btn-overview {
+    padding: 16px 50px;
+    max-width: 624px;
+  }
+  .event-card {
+    gap: 25px;
+  }
+  .event-card__info {
+    gap: 15px;
+  }
+  .header {
+    padding: 0 293px;
+    height: 147px;
+  }
+  .footer__wrapper {
+    margin: 150px 293px 75px;
+  }
+  .footer__lines {
+    gap: 98px;
+  }
 }
-.article__info {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-
-    @media screen and (width >= 1920px) {
-        gap: 15px;
-    }
-    @media screen and (max-width: 1920px) {
-        gap: 8px;
-    }
-    @media screen and (max-width: 1340px) {
-        gap: 10px;
-    }
+@media screen and (max-width: 1920px) {
+  .page-title {
+    font-size: 35px;
+  }
+  .events__main-header {
+    margin: calc(138px + 111px) 0 130px;
+  }
+  .events__articles {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+    grid-column-gap: 40px;
+    grid-row-gap: 100px;
+    padding: 0 39px;
+  }
+  .additional-services__btn {
+    margin-bottom: 130px;
+  }
+  .home__main-header {
+    margin: 100px 301px 70px;
+  }
+  .btn-overview {
+    padding: 16px 76px;
+    max-width: 604px;
+  }
+  .event-card {
+    gap: 20px;
+  }
+  .event-card__info {
+    gap: 8px;
+  }
+  .header {
+    padding: 0 40px;
+    height: 111px;
+  }
+  .footer__wrapper {
+    margin: 150px 40px 75px;
+  }
+  .footer__lines {
+    gap: 92px;
+  }
 }
-.article-subtitle {
-    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+@media screen and (max-width: 1340px) {
+  .page-title {
+    font-size: 30px;
+  }
+  .title {
+    font-size: 24px;
+  }
+  .subtitle {
+    font-size: 20px;
+  }
+  .text {
+    font-size: 16px;
+  }
+  .date-text {
+    font-size: 16px;
+  }
+  .link {
+    font-size: 16px;
+  }
+  .events__main-header {
+    margin: calc(91px + 111px) 0 100px;
+  }
+  .events__articles {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    grid-column-gap: 30px;
+    grid-row-gap: 80px;
+    padding: 0 30px;
+  }
+  .additional-services__btn {
+    margin-bottom: 100px;
+  }
+  .home__main-header {
+    margin: 80px 68px 51px;
+  }
+  .btn-overview {
+    padding: 13px 40px;
+    max-width: 566px;
+  }
+  .event-card {
+    gap: 15px;
+  }
+  .event-card__info {
+    gap: 10px;
+  }
+  .header {
+    padding: 0 30px;
+    height: 111px;
+  }
+  .footer__wrapper {
+    margin: 100px 30px 65px;
+  }
+  .footer__lines {
+    gap: 52px;
+  }
 }
-.article-subtitle:hover {
-    color: var(--color-red-hover);
-    cursor: pointer;
-    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+@media screen and (max-width: 768px) {
+  .page-title {
+    font-size: 13px;
+  }
+  .title {
+    font-size: 16px;
+  }
+  .title-secondary {
+    font-size: 16px;
+  }
+  .subtitle {
+    font-size: 16px;
+  }
+  .text {
+    font-size: 14px;
+  }
+  .events__main-header {
+    margin: calc(80px + 70px) 0;
+  }
+  .events__articles {
+    grid-template-columns: 1fr;
+    grid-template-rows: repeat(3, 1fr);
+    grid-row-gap: 60px;
+    padding: 0 20px;
+  }
+  .additional-services__btn {
+    margin-bottom: 80px;
+  }
+  .home__main-header {
+    margin: 80px 23px 29px;
+  }
+  .btn-overview {
+    padding: 11px 19px;
+    max-width: 280px;
+  }
+  .event-card {
+    gap: 25px;
+  }
+  .header {
+    padding: 0;
+    height: 70px;
+  }
+  .footer__wrapper {
+    margin: 100px 0 50px;
+  }
+  .footer__lines {
+    gap: 20px;
+  }
 }
-.article-image {
-    width: 100%;
-}
-
-.article__drop-down {
-    display: flex;
-    flex-direction: column;
-
-    align-items: center;
-    gap: 18px;
-    cursor: pointer;
-    max-width: 128px;
-    margin: 70px auto 100px;
-}
-
-.additional-services__header {
-    display: inline-flex;
-    justify-content: center;
-    width: 100%;
-    
-}
-
-.additional-services-btn {
-    @media screen and (width >= 1920px) {
-        margin-bottom: 150px;
-    }
-    @media screen and (max-width: 1920px) {
-        margin-bottom: 130px;
-    }
-    @media screen and (max-width: 1340px) {
-        margin-bottom: 100px;
-    }
-    @media screen and (max-width: 768px) {
-        margin-bottom: 80px;
-    }
-}
-
-.additional-services-title {
-    white-space: nowrap;
+@media screen and (width >= 1340px) {
+  .title {
+    font-size: 45px;
+  }
+  .subtitle {
+    font-size: 24px;
+  }
+  .text {
+    font-size: 16px;
+  }
+  .date-text {
+    font-size: 14px;
+  }
 }
