feat: Add some updates from design

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -445,6 +445,9 @@ textarea {
           flex-direction: column;
   gap: 46px;
 }
+.offers p {
+  margin: 0;
+}
 .offers__btn {
   -webkit-box-flex: 1;
       -ms-flex: 1;
@@ -514,21 +517,6 @@ textarea {
 .system-descr__description {
   font-weight: 400;
   font-size: 16px;
-}
-.upcoming__events-list {
-  -webkit-box-sizing: border-box;
-          box-sizing: border-box;
-  width: 100%;
-  max-width: 1414px;
-  margin-left: auto;
-  margin-right: auto;
-  padding-left: 40px;
-  padding-right: 40px;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
 }
 h4 {
   margin: 0;
@@ -921,6 +909,66 @@ ol li:last-child {
   height: 1px;
   background-color: #1f1e1e;
   pointer-events: none;
+}
+.upcoming__events-list {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 100%;
+  max-width: 1414px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 40px;
+  padding-right: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.upcoming__actions {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 100px;
+  width: 100%;
+}
+.upcoming__event-card {
+  width: calc(33.3333% - 60px);
+  margin: 0 30px 70px;
+}
+.upcoming__links {
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  width: 100%;
+  max-width: 1414px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left: 40px;
+  padding-right: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.upcoming__link {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 100%;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  padding: 0;
+  height: 52px;
+  margin-right: 40px;
 }
 .subscribe {
   max-width: 410px;
@@ -1519,15 +1567,11 @@ ol li:last-child {
   gap: 67px;
   margin-right: 30px;
 }
-.main-header {
-  padding: 100px 0;
-}
 .main-header__title {
-  margin: 0 0 70px;
+  margin-bottom: 70px;
   padding-left: 40px;
   padding-right: 40px;
   text-align: center;
-  margin-top: 70px;
   text-transform: uppercase;
   font-family: "Lora", serif;
   font-weight: 400;
@@ -1539,14 +1583,13 @@ ol li:last-child {
   padding-left: 40px;
   padding-right: 40px;
   text-align: center;
-  margin-top: 70px;
   text-transform: uppercase;
   font-family: "Lora", serif;
   font-weight: 400;
   font-size: 45px;
   line-height: normal;
   color: #1f1e1e;
-  margin: 0 auto;
+  margin: 70px auto;
   max-width: 948px;
   width: 100%;
 }
@@ -1908,6 +1951,37 @@ ol li:last-child {
           box-sizing: border-box;
   padding: 60px 0 75px;
 }
+.page-footer__pp {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 20px;
+}
+.page-footer__pp-actions {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  gap: 60px;
+}
+.page-footer__about {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  width: 100%;
+}
+.page-footer__about p {
+  margin: 0;
+}
 .page-footer__container {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -1917,6 +1991,14 @@ ol li:last-child {
   margin-right: auto;
   padding-left: 40px;
   padding-right: 40px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  gap: 60px;
 }
 .page-footer__border {
   display: -webkit-box;
@@ -1987,6 +2069,23 @@ ol li:last-child {
 .page-footer__nav-link:active {
   color: #bc3324;
 }
+.page-footer__description {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  gap: 15px;
+}
+.page-footer__contacts {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
 .width_624 {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
@@ -2023,6 +2122,10 @@ ol li:last-child {
     padding-right: 30px;
   }
   .upcoming__events-list {
+    padding-left: 30px;
+    padding-right: 30px;
+  }
+  .upcoming__links {
     padding-left: 30px;
     padding-right: 30px;
   }
@@ -2074,10 +2177,6 @@ ol li:last-child {
     padding-right: 20px;
   }
   .system-descr {
-    padding-left: 20px;
-    padding-right: 20px;
-  }
-  .upcoming__events-list {
     padding-left: 20px;
     padding-right: 20px;
   }
@@ -2178,6 +2277,14 @@ ol li:last-child {
     display: -ms-inline-flexbox;
     display: inline-flex;
     border-top: 1px solid #bfbfbf;
+  }
+  .upcoming__events-list {
+    padding-left: 20px;
+    padding-right: 20px;
+  }
+  .upcoming__links {
+    padding-left: 20px;
+    padding-right: 20px;
   }
   .listing {
     padding-left: 20px;
